--- a/index.html
+++ b/index.html
@@ -113,175 +113,36 @@
           <div id="hourlyChart">
             <canvas id="myChart">
                 <!-- Fallback / screen reader content -->
-                <p>Text Here should not be displayed</p>
+                <p>Graph of Hourly Traffic</p>
 
-                <script src="js/charts/hourly.js">
-                </script>
+                <script src="js/charts/hourly.js"></script>
               </canvas>
           </div>
 
           <div id="dailyChart">
             <canvas id="myChartD">
                 <!-- Fallback / screen reader content -->
-                <p>Text Here should not be displayed</p>
+                <p>Graph of Daily Traffic</p>
 
-                <script>
-
-                const labelsD = [
-                  'Sun',
-                  'M',
-                  'T',
-                  'W',
-                  'Th',
-                  'F',
-                  'Sat',
-                ];
-                const dataD = {
-                  labels: labelsD,
-                  datasets: [{
-                    label: 'Daily',
-                    backgroundColor: 'rgb(117 119 191 / 52%)',
-                    borderColor: '#4d4c72',
-                    fill: true,
-                    data: [1000, 2000, 2300, 3000, 2500, 3200, 1800],
-                  }]
-                };
-
-                const configD = {
-                  type: 'line',
-                  data: dataD,
-                  options: {
-                    elements: {
-                      line: {
-                        borderWidth: 0,
-                        tension: (.17,.67,.83,.67)
-                      }
-                    },
-                    plugins: {
-                      legend: {
-                        display: false
-                      }
-                    }
-                  }
-                };
-
-                const myChartD = new Chart(
-                    document.getElementById('myChartD'),
-                    configD
-                  );
-
-                </script>
+                <script src="js/charts/daily.js"></script>
               </canvas>
           </div>
 
           <div id="weeklyChart">
             <canvas id="myChartW">
                 <!-- Fallback / screen reader content -->
-                <p>Text Here should not be displayed</p>
+                <p>Graph of Weekly Traffic</p>
 
-                <script>
-
-                const labelsW = [
-                  'Week One',
-                  'Week Two',
-                  'Week Three',
-                  'Week Four',
-                  'Week Five',
-                ];
-                const dataW = {
-                  labels: labelsW,
-                  datasets: [{
-                    label: 'Weekly',
-                    backgroundColor: 'rgb(117 119 191 / 52%)',
-                    borderColor: '#4d4c72',
-                    fill: true,
-                    data: [15600, 20000, 18000, 20500, 13200],
-                  }]
-                };
-
-                const configW = {
-                  type: 'line',
-                  data: dataW,
-                  options: {
-                    elements: {
-                      line: {
-                        borderWidth: 0,
-                        tension: (.17,.67,.83,.67)
-                      }
-                    },
-                    plugins: {
-                      legend: {
-                        display: false
-                      }
-                    }
-                  }
-                };
-
-                const myChartW = new Chart(
-                    document.getElementById('myChartW'),
-                    configW
-                  );
-
-                </script>
+                <script src="js/charts/weekly.js"></script>
               </canvas>
           </div>
 
           <div id="monthlyChart">
             <canvas id="myChartM">
                 <!-- Fallback / screen reader content -->
-                <p>Text Here should not be displayed</p>
+                <p>Graph of Monthly Traffic</p>
 
-                <script>
-
-                const labelsM = [
-                  'Jan',
-                  'Feb',
-                  'Mar',
-                  'Apr',
-                  'May',
-                  'June',
-                  'July',
-                  'Aug',
-                  'Sept',
-                  'Oct',
-                  'Nov',
-                  'Dec',
-                ];
-                const dataM = {
-                  labels: labelsM,
-                  datasets: [{
-                    label: 'Monthly',
-                    backgroundColor: 'rgb(117 119 191 / 52%)',
-                    borderColor: '#4d4c72',
-                    fill: true,
-                    data: [91230, 90749, 89240, 93060, 88910, 95602, 99090, 99402, 97030, 96620, 97055, 89723],
-                  }]
-                };
-
-                const configM = {
-                  type: 'line',
-                  data: dataM,
-                  options: {
-                    elements: {
-                      line: {
-                        borderWidth: 0,
-                        tension: (.17,.67,.83,.67)
-                      }
-                    },
-                    plugins: {
-                      legend: {
-                        display: false
-                      }
-                    }
-                  }
-                };
-
-                const myChartM = new Chart(
-                    document.getElementById('myChartM'),
-                    configM
-                  );
-
-                </script>
+                <script src="js/charts/monthly.js"></script>
               </canvas>
           </div>
 
