--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 const data1 = {
                   labels: labels1,
                   datasets: [{
-                    label: 'Butts',
+                    label: 'Daily Traffic',
                     backgroundColor: '#7577bf',
                     borderColor: '#4d4c72',
                     data: [75, 125, 175, 125, 225, 200, 100],
@@ -221,7 +221,7 @@
                 const userdata = {
                   labels: devices,
                   datasets: [{
-                    label: 'Butts',
+                    label: 'Devices',
                     backgroundColor: ['#7577bf', '#81c98f', '#58b6c8'],
                     // borderColor: '['#7577bf', '#81c98f', '#58b6c8'],
                     data: [60, 25, 15],
